@@ -52,6 +52,7 @@ import java.util.*;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
+import static alfio.model.system.ConfigurationKeys.AUTOMATIC_REMOVAL_EXPIRED_OFFLINE_PAYMENT;
 import static alfio.test.util.IntegrationTestUtil.AVAILABLE_SEATS;
 import static alfio.test.util.IntegrationTestUtil.initEvent;
 import static org.junit.Assert.*;
@@ -62,8 +63,8 @@ import static org.junit.Assert.*;
 @Transactional
 public class TicketReservationManagerIntegrationTest extends BaseIntegrationTest {
 
-    private static final Map<String, String> DESCRIPTION = Collections.singletonMap("en", "desc");
-    public static final String ACCESS_CODE = "MYACCESSCODE";
+    static final Map<String, String> DESCRIPTION = Collections.singletonMap("en", "desc");
+    private static final String ACCESS_CODE = "MYACCESSCODE";
 
     @Autowired
     private EventManager eventManager;
@@ -130,7 +131,7 @@ public class TicketReservationManagerIntegrationTest extends BaseIntegrationTest
 
     @Test
     public void testTicketSelection() {
-        List<TicketCategoryModification> categories = Arrays.asList(
+        List<TicketCategoryModification> categories = List.of(
                 new TicketCategoryModification(null, "default", AVAILABLE_SEATS,
                         new DateTimeModification(LocalDate.now(), LocalTime.now()),
                         new DateTimeModification(LocalDate.now(), LocalTime.now()),
@@ -159,13 +160,13 @@ public class TicketReservationManagerIntegrationTest extends BaseIntegrationTest
 
         TicketReservationWithOptionalCodeModification mod = new TicketReservationWithOptionalCodeModification(tr, Optional.empty());
         TicketReservationWithOptionalCodeModification mod2 = new TicketReservationWithOptionalCodeModification(tr2, Optional.empty());
-        String reservationId = ticketReservationManager.createTicketReservation(event, Arrays.asList(mod, mod2), Collections.emptyList(), DateUtils.addDays(new Date(), 1), Optional.empty(), Locale.ENGLISH, false);
+        String reservationId = ticketReservationManager.createTicketReservation(event, List.of(mod, mod2), Collections.emptyList(), DateUtils.addDays(new Date(), 1), Optional.empty(), Locale.ENGLISH, false);
 
         List<TicketReservation> reservations = ticketReservationManager.findAllReservationsInEvent(event.getId(), 0, null, null).getKey();
         assertEquals(1, reservations.size());
         assertEquals(reservationId, reservations.get(0).getId());
 
-        List<Ticket> pendingTickets = ticketRepository.findPendingTicketsInCategories(Arrays.asList(bounded.getId(), unbounded.getId()));
+        List<Ticket> pendingTickets = ticketRepository.findPendingTicketsInCategories(List.of(bounded.getId(), unbounded.getId()));
         assertEquals(19, pendingTickets.size());
         pendingTickets.forEach(t -> assertEquals(1000, t.getFinalPriceCts()));
         List<Ticket> tickets = ticketRepository.findFreeByEventId(event.getId());
@@ -518,7 +519,7 @@ public class TicketReservationManagerIntegrationTest extends BaseIntegrationTest
 
     @Test
     public void testCleanupExpiredReservations() {
-        List<TicketCategoryModification> categories = Arrays.asList(
+        List<TicketCategoryModification> categories = List.of(
             new TicketCategoryModification(null, "default", 10,
                 new DateTimeModification(LocalDate.now(), LocalTime.now()),
                 new DateTimeModification(LocalDate.now(), LocalTime.now()),
@@ -556,7 +557,7 @@ public class TicketReservationManagerIntegrationTest extends BaseIntegrationTest
 
     @Test
     public void testCleanupOfflineExpiredReservations() {
-        List<TicketCategoryModification> categories = Arrays.asList(
+        List<TicketCategoryModification> categories = List.of(
             new TicketCategoryModification(null, "default", 10,
                 new DateTimeModification(LocalDate.now(), LocalTime.now()),
                 new DateTimeModification(LocalDate.now(), LocalTime.now()),
@@ -600,7 +601,11 @@ public class TicketReservationManagerIntegrationTest extends BaseIntegrationTest
         Assert.assertEquals(reservationId, idsOffline.get(0));
 
         ticketReservationManager.cleanupExpiredOfflineReservations(now);
+        Assert.assertFalse(idsOfflinePayment.get().isEmpty());
 
+        configurationRepository.insert(AUTOMATIC_REMOVAL_EXPIRED_OFFLINE_PAYMENT.name(), "true", "");
+
+        ticketReservationManager.cleanupExpiredOfflineReservations(now);
         Assert.assertTrue(idsOfflinePayment.get().isEmpty());
 
     }
